<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountWithEmailAndPassword">

    <TextView
        android:id="@+id/tx_create_account_phonel_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_create_account_email_message"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003" />

    <TextView
        android:id="@+id/tx_create_account_phone_message_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_create_account_email_message_detail"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_create_account_phonel_message"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/etx_email"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:ems="10"
        android:hint="@string/etx_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_create_account_phone_message_detail" />

    <EditText
        android:id="@+id/etx_pass"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/etx_pass"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etx_email" />




    <Button
        android:id="@+id/bt_generate_otp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/create_account_with_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etx_pass" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_generate_otp" />
</androidx.constraintlayout.widget.ConstraintLayout>